adding buttons, anchor links, link to top

--- a/style.css
+++ b/style.css
@@ -5,11 +5,16 @@
 	font-size: 120%;
 	line-height: 120%;
 	--spacing: 2rem;
+	scroll-behavior: smooth;
 }
 
 @media (width > 600px) {
 	:root {
 		font-size: 300%;
+	}
+
+	.topbutton {
+		display: none;
 	}
 }
 
@@ -34,7 +39,7 @@ header p{
 }
 
 header {
-	margin-block-start: calc(4 * var(--spacing));
+	padding-block-start: calc(4 * var(--spacing));
 	margin-block-end: var(--spacing);
 }
 
@@ -50,4 +55,43 @@ blockquote p {
 p {
 	margin-block-end: var(--spacing);
 }
+
+.links {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	row-gap: calc(var(--spacing) / 2);
+	padding-block: var(--spacing);
+}
+
+a {
+	width: 48%;
+	min-height: 4rem;
+	border-radius: 0.7rem;
+	font-family: "arial-rounded-mt-pro", sans-serif;
+	font-weight: 700;
+	font-size: 0.8rem;
+	line-height: 1rem;
+	padding-inline: calc(var(--spacing) / 3);
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	border-style: solid;
+	border-width: 0.1rem;
+	border-color: rgb(0, 0, 0);
+	background: #0d0d0d;
+	background: linear-gradient(180deg,rgba(13, 13, 13, 1) 0%, rgba(219, 219, 219, 1) 5%, rgba(15, 15, 15, 1) 61%);
+}
+
+.topbutton {
+	position: fixed;
+	inset-inline-end: var(--spacing);
+	inset-block-end: var(--spacing);
+	width: 25%;
+	min-height: 2rem;
+}
+
+
 
