--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Gradients generated via https://cssgradient.io/ */
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
@@ -86,6 +84,7 @@ a {
 	transition: 300ms ease-in-out;
 }
 
+/* inner shadow code obtained from https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
 a:hover {
 	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 	color: var(--white);
