--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 	--spacing: 2rem;
 	scroll-behavior: smooth;
 	--white: rgb(238, 239, 243);
+	--darkblue: #092d45;
+	--lightblue: #87c3eb;
+	--black:#000000;
 	background-color: var(--white);
 }
 
@@ -47,7 +50,8 @@ blockquote {
 	font-size: 1.3rem;
 	font-weight: 200;
 	line-height: 1.5rem;
-	border-inline-start: 0.2rem solid black;
+	border-inline-start: 0.2rem ridge var(--black);
+	border-radius: 0.4rem;
 	padding-inline-start: calc(var(--spacing) / 2);
 }
 
@@ -62,25 +66,23 @@ p {
 .links {
 	display: flex;
 	justify-content: space-between;
-	row-gap: calc(var(--spacing) / 2);
-	padding-block: var(--spacing);
+	padding-block-start: var(--spacing);
 }
 
 a {
 	min-height: 1.4rem;
 	border-radius: 0.4rem;
 	font-family: "Nunito", sans-serif;
-	width:100%;
 	color: var(--white);
 	align-items: center;
 	padding-inline: calc(var(--spacing) / 3);
 	justify-content: center;
 	text-align: center;
-	border-style: solid;
+	border-style: ridge;
 	border-width: 0.1rem;
-	border-color: #092d45;
-	color: #092d45;
-	background: #87c3eb;
+	border-color: var(--darkblue);
+	color: var(--darkblue);
+	background: var(--lightblue);
 	transition: 300ms ease-in-out;
 }
 
@@ -92,26 +94,15 @@ a:hover {
 }
 
 
-
 .linkbutton {
-	width: 30%;
-	min-height: 4rem;
-	border-radius: 0.7rem;
-	font-family: "Nunito", sans-serif;
-	font-weight: 700;
-	font-size: 0.8rem;
-	line-height: 1rem;
-	padding-inline: calc(var(--spacing) / 3);
-	color: var(--white);
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	text-align: center;
-	border-style: solid;
-	border-width: 0.1rem;
-	border-color: rgb(0, 0, 0);
-	background: #0d0d0d;
-	background: linear-gradient(180deg,rgba(13, 13, 13, 1) 0%, rgba(219, 219, 219, 1) 5%, rgba(15, 15, 15, 1) 61%);
+	padding-block: calc(var(--spacing) / 3);
+	font-size: 0.75rem;
+	line-height: 0.8rem;
+	width: 16%;
+	
 }
 
 .topbutton {
