--- a/style.css
+++ b/style.css
@@ -43,11 +43,6 @@ header p{
 	line-height: 2.2rem;
 }
 
-header {
-	margin-block-start: calc(6 * var(--spacing));
-	margin-block-end: var(--spacing);
-}
-
 #top {
 	border: 0.2rem ridge var(--black);
 	border-radius: 0.4rem;
@@ -62,7 +57,7 @@ blockquote {
 	font-weight: 200;
 	border: 0.2rem ridge var(--black);
 	border-radius: 0.4rem;
-	margin-block: calc(var(--spacing) / 2);
+	margin-block: calc(var(--spacing) * 3);
 	padding-block-end: calc(var(--spacing)/2);
 	line-height: 1.8rem;
 }
@@ -134,6 +129,17 @@ a:hover {
 	min-height: 2rem;
 }
 
+section {
+	background-color: var(--accent);
+	border-radius: 0.4rem;
+	padding-block: var(--spacing);
+	margin-block-start: calc(6 * var(--spacing)); 
+}
+
+.beginning{
+	margin-block-start: 0;
+}
+
 @media (width > 500px) {
 	:root {
 		font-size: 135%;
@@ -147,7 +153,6 @@ a:hover {
 	h1 {
 		padding-inline: var(--spacing);
 	}
-
 	
 }
 
