--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ blockquote p {
 .links {
 	display: flex;
 	justify-content: space-between;
-	padding-block-start: var(--spacing);
+	/* padding-block-start: var(--spacing); */
+	position:absolute;
+	inset-block-start: -3rem
 }
 
 a {
@@ -115,9 +117,12 @@ a:hover {
 	align-items: center;
 	justify-content: center;
 	padding-block: calc(var(--spacing) / 3);
-	font-size: 0.75rem;
+	font-size: 0.7rem;
 	line-height: 0.8rem;
 	width: 16%;
+	border-width: 0;
+	border-radius: 0.4rem 0.4rem 0rem 0rem;
+	background-color: var(--accent);
 	
 }
 
@@ -134,6 +139,7 @@ section {
 	border-radius: 0.4rem;
 	padding-block: var(--spacing);
 	margin-block-start: calc(6 * var(--spacing)); 
+	position:relative;
 }
 
 .beginning{
