reset accent color

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 	scroll-behavior: smooth;
 	--white: rgb(238, 239, 243);
 	--darkblue: #154361;
-	--accent: #65656587;
+	--accent: #656565;
 	--lightblue: #addeff;
 	--black:#000000;
 	background-color: var(--white);
