--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ p {
 }
 
 header p{
+	font-size: 2.2rem;
+	line-height: 2.2rem;
 	font-family: "Nunito", sans-serif;
 	font-weight: 700;
-	font-size: 2.5rem;
 	letter-spacing: -0.02rem;
-	line-height: 2.2rem;
 }
 
 #top {
@@ -99,7 +99,7 @@ a {
 
 /* inner shadow code obtained from https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
 a:hover {
-	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.718);
 	color: var(--white);
 	background-color: var(--darkblue);
 	transition: 300ms ease-in-out;
@@ -141,10 +141,6 @@ section {
 	padding-block-start: calc(2 *var(--spacing));
 }
 
-.beginning{
-	margin-block-start: calc(-1.5 *var(--spacing));
-}
-
 	article p {
 		padding-inline: var(--spacing);
 		max-width: 64ch;
@@ -155,29 +151,43 @@ section {
 	}
 
 
+.links {
+	height: auto;
+	flex-direction: column;
+	display: flex;
+	margin-block-start: calc(6 * var(--spacing)); 
+}
+
+
+		.beginning{
+	margin-block-start: calc(-1.5 *var(--spacing));
+}
+
 @media (width > 580px) {
 	:root {
 		font-size: 135%;
 	}
 
-
 	.links {
-	display: flex;
-	inset-block-start: -3rem;
+	flex-direction: row;
 	height: 4rem;
-	/* background-color: green; */
-	inset-inline-end: var(--spacing);
-	inset-inline-start: var(--spacing);
-	display: flex;
-	justify-content: space-between;
-	inset-inline-end: 0;
-	inset-inline-start: 0;
-	margin-block-start: calc(6 * var(--spacing)); 
 }
-	h1 {
-		font-size: 4.8rem;
-		line-height: 4.8rem;
-	}
+
+
+		.beginning{
+	margin-block-start: calc(-1.5 *var(--spacing));
+}
+
+
+header p{
+	font-family: "Nunito", sans-serif;
+	font-weight: 700;
+	font-size: 2.5rem;
+	letter-spacing: -0.02rem;
+	line-height: 2.2rem;
+}
+
+
 
 }
 
@@ -190,6 +200,12 @@ blockquote {
 		margin-inline-start: 40%;
 	}
 
+	h1 {
+		font-size: 4.8rem;
+		line-height: 4.8rem;
+	}
+
+	
 
 }
 
