--- a/style.css
+++ b/style.css
@@ -307,40 +307,53 @@ a:hover {
 @media print {
 
 	:root {
-		font-size: 80%;
+		font-size: 12pt;
+
 	}
 
 	body {
 		background-color: white;
+		padding-inline: 0.2in;
+		padding-block: 1in;
 	}
 
 	#top, section, blockquote {
 		border-color: black;
 	}
 
-	.links {
-		opacity: 0;
-		margin-block-start: calc(var(--spacing) / 4); 
+	#top{
+		margin-block-start: 0;
 	}
 
-	section{
-		border-block-start: 0.2rem solid black;
-		border-radius: 0.4rem;
+	section {
+		border: none;
+		border-inline-start: 0.2rem solid black;
+		border-radius: 0;
+		padding-block: 0;
+		margin-block-end: 1in;
+	}	
+	
+	.beginning{
+		margin-block-start:0;
+	}
+
+	.links {
+		display: none;
 	}
 
 	blockquote{
-		margin-block: var(--spacing);
+		margin-block: 1in;
 	}
 
 	article p{
 		max-width: 1000ch;
+		margin-block-end: 0.25in;
 	}
 
 	a{
 		border: none;
-		text-decoration: underline;
+		text-decoration: none;
 		padding-inline: 0;
-
 	}
 
 	.quoteheader{
@@ -349,9 +362,11 @@ a:hover {
 		margin-inline: var(--spacing); */
 	}
 
-	#top, blockquote {
-		border: none;
-	}	
+	footer{
+		border-color: black;
+		flex-direction: row;
+		justify-content: space-between;
+		padding-inline: 0;
+	}
+
 }
-
-
