--- a/style.css
+++ b/style.css
@@ -231,6 +231,10 @@ footer p {
 	border-top-right-radius: 0.4rem;
 }
 
+.notice {
+	display: none;
+}
+
 @media (width > 580px) {
 	:root {
 		font-size: 135%;
@@ -369,4 +373,56 @@ a:hover {
 		padding-inline: 0;
 	}
 
+}
+
+@media (prefers-contrast: no-preference) {
+
+	.blur1 {
+		filter: blur(1px)
+	}
+
+	.blur2 {
+		filter: blur(2px)
+	}
+
+	.blur3 {
+		filter: blur(3px)
+	}
+	
+	.blur4 {
+		filter: blur(4px)
+	}
+
+	.blur5 {
+		filter: blur(5px)
+	}
+
+	.blur6 {
+		filter: blur(6px)
+	}
+
+	.blur7 {
+		filter: blur(7px)
+	}
+
+	.blur8 {
+		filter: blur(8px)
+	}
+
+	.blur9 {
+		filter: blur(9px)
+	}
+
+	.notice {
+	position: fixed;
+	inset-block-end: calc(var(--spacing) * -1);
+	display: block;
+	text-align: center;
+	width: 100%;
+	z-index: 100;
+	font-family: "Nunito", sans-serif;
+	font-weight: 700;
+	font-style: normal;
+	font-size: 1rem;
+}
 }
