--- a/style.css
+++ b/style.css
@@ -393,39 +393,39 @@ footer p {
 @media (prefers-contrast: no-preference) {
 
 	.blur1 {
-		filter: blur(1px)
+		filter: blur(1px);
 	}
 
 	.blur2 {
-		filter: blur(2px)
+		filter: blur(2px);
 	}
 
 	.blur3 {
-		filter: blur(3px)
+		filter: blur(3px);
 	}
 	
 	.blur4 {
-		filter: blur(4px)
+		filter: blur(4px);
 	}
 
 	.blur5 {
-		filter: blur(5px)
+		filter: blur(5px);
 	}
 
 	.blur6 {
-		filter: blur(6px)
+		filter: blur(6px);
 	}
 
 	.blur7 {
-		filter: blur(7px)
+		filter: blur(7px);
 	}
 
 	.blur8 {
-		filter: blur(8px)
+		filter: blur(8px);
 	}
 
 	.blur9 {
-		filter: blur(9px)
+		filter: blur(9px);
 	}
 
 	.notice {
